# ML-DL-project

./: .gitignore  CMakeLists.txt  DataConfig.hpp  DataHandler.cpp  DataHandler.h  common.cpp  common.h  data.cpp  data.h  main.cpp
Algorithms/: Kmeans.cpp  Kmeans.h  Knn.cpp  Knn.h
DeepLearning/: HiddenLayer.h  InputLayer.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  OutputLayer.h
x64/Debug/: MLProject.exe.recipe  network.obj.enc  vc143.idb
x64/Debug/MLProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MLProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
